Updated documentation for running iOS